checker/tests/nullness-extra/compat/Expected.txt
CompatTest.java:7: error: [assignment.type.incompatible] incompatible types in assignment.
        @NonNull Object o = Lib.maybeGetObject();
                                              ^
  found   : @Nullable Object
  required: @NonNull Object
1 error
